--- a/mcotac-gem/platform/GNU/Makefile.kosas-spider-mpi
+++ b/mcotac-gem/platform/GNU/Makefile.kosas-spider-mpi
@@ -1,7 +1,7 @@
 CC = mpicc
-CXX = mpicxx
+CXX = mpiCC
 FORT = mpif90
-CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -pedantic -fno-nonansi-builtins -D__unix -D__GNU
+CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -pedantic -D__unix -D__GNU
 # -lstd -lC -lpgc -lrt -Msecond_underscore
 CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__GNU 
 CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__GNU 
@@ -14,14 +14,16 @@ GEMLIB     = -L../../GEMIPM2K -lgemipm2k
 EXEC = mcotacgem-mpi
 
 ${EXEC}: mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
-       f_gem_node.o
+       f_gem_node.o quicksort.o
        
-	${LINK} -o ${EXEC}  ${LFLAGS} mcotac1d.o datio.o \
+	${LINK} -o ${EXEC}  ${LFLAGS} mcotac1d.o datio.o quicksort.o\
           erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o  ${GEMLIB}  ${LIBS}
 
 mcotac1d.o: mcotac1d.f gwheader.inc kinetics.inc
 	cp mcotac1d.f mcotac1d.fpp
 	$(FORT)  $(FFLAGS) mcotac1d.fpp
+quicksort.o: quicksort.f
+	$(FORT)  $(FFLAGS) quicksort.f
 datio.o: datio.f gwheader.inc kinetics.inc
 	cp datio.f datio.fpp
 	$(FORT)  $(FFLAGS) datio.fpp
