dded directory for 2D version of MCOTAC
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@267 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -208,6 +208,98 @@ mcotac-gem/test/wb.dat -text
 mcotac-gem/test/wc.dat -text
 mcotac-gem/test/wd.dat -text
 mcotac-gem/test/we.dat -text
+mcotac2d-gem/debug/TEST.INI -text
+mcotac2d-gem/debug/initial.out -text
+mcotac2d-gem/doc/Readme.1st -text
+mcotac2d-gem/platform/GNU/Makefile -text
+mcotac2d-gem/platform/GNU/Makefile.kosas-spider -text
+mcotac2d-gem/platform/GNU/Makefile.kosas-spider-mpi -text
+mcotac2d-gem/platform/GNU/Makefile.lib -text
+mcotac2d-gem/platform/GNU/readme -text
+mcotac2d-gem/platform/INTEL/Makefile -text
+mcotac2d-gem/platform/PGI/Makefile -text
+mcotac2d-gem/platform/PGI/Makefile.mpi -text
+mcotac2d-gem/platform/readme.1st -text
+mcotac2d-gem/source/Makefile -text
+mcotac2d-gem/source/datio.f -text
+mcotac2d-gem/source/erech.f -text
+mcotac2d-gem/source/f_gem_node.cpp -text
+mcotac2d-gem/source/gwheader.h -text
+mcotac2d-gem/source/gwheader.inc -text
+mcotac2d-gem/source/hydro1d_.c -text
+mcotac2d-gem/source/inistat2.f -text
+mcotac2d-gem/source/inparf.f -text
+mcotac2d-gem/source/kinetics.inc -text
+mcotac2d-gem/source/mcotac1d.f -text
+mcotac2d-gem/source/quicksort.f -text
+mcotac2d-gem/source/setpar_.c -text
+mcotac2d-gem/source/walk2_.c -text
+mcotac2d-gem/source/wegdat1d_.c -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-dat.lst -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-dbr-0-0000.dat -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-dbr-0-0000.dat.short -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-dbr-0-0001.dat -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-dbr-0-0001.dat.short -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-dch.dat -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-ipm.dat -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem-ipm.dat.short -text
+mcotac2d-gem/test/MCOTAC-GEM/MySystem.ipm -text
+mcotac2d-gem/test/MCOTAC-GEM/caldpl.zip -text
+mcotac2d-gem/test/TEST.INI -text
+mcotac2d-gem/test/am0001.dat -text
+mcotac2d-gem/test/c_2daa.dat -text
+mcotac2d-gem/test/c_2dab.dat -text
+mcotac2d-gem/test/c_2dac.dat -text
+mcotac2d-gem/test/c_2dad.dat -text
+mcotac2d-gem/test/c_2dae.dat -text
+mcotac2d-gem/test/c_2dsa.dat -text
+mcotac2d-gem/test/c_2dsb.dat -text
+mcotac2d-gem/test/c_2dsc.dat -text
+mcotac2d-gem/test/c_2dsd.dat -text
+mcotac2d-gem/test/c_2dse.dat -text
+mcotac2d-gem/test/conc1t.dat -text
+mcotac2d-gem/test/conc2t.dat -text
+mcotac2d-gem/test/conc3t.dat -text
+mcotac2d-gem/test/conc4t.dat -text
+mcotac2d-gem/test/conc5t.dat -text
+mcotac2d-gem/test/conca.dat -text
+mcotac2d-gem/test/concb.dat -text
+mcotac2d-gem/test/concc.dat -text
+mcotac2d-gem/test/concd.dat -text
+mcotac2d-gem/test/conce.dat -text
+mcotac2d-gem/test/h00001.dat -text
+mcotac2d-gem/test/iche01.dat -text
+mcotac2d-gem/test/initial.out -text
+mcotac2d-gem/test/input_1.dat -text
+mcotac2d-gem/test/ipmlog.txt -text
+mcotac2d-gem/test/ir0001.dat -text
+mcotac2d-gem/test/mco_out.out -text
+mcotac2d-gem/test/p_ibxa.dat -text
+mcotac2d-gem/test/p_ibxb.dat -text
+mcotac2d-gem/test/p_ibxc.dat -text
+mcotac2d-gem/test/p_ibxd.dat -text
+mcotac2d-gem/test/p_ibxe.dat -text
+mcotac2d-gem/test/por001.dat -text
+mcotac2d-gem/test/qn0001.dat -text
+mcotac2d-gem/test/qr0001.dat -text
+mcotac2d-gem/test/ra.dat -text
+mcotac2d-gem/test/rb.dat -text
+mcotac2d-gem/test/rc.dat -text
+mcotac2d-gem/test/rd.dat -text
+mcotac2d-gem/test/re.dat -text
+mcotac2d-gem/test/solids.dat -text
+mcotac2d-gem/test/ss0001.dat -text
+mcotac2d-gem/test/test11.itm -text
+mcotac2d-gem/test/va.dat -text
+mcotac2d-gem/test/vb.dat -text
+mcotac2d-gem/test/vc.dat -text
+mcotac2d-gem/test/vd.dat -text
+mcotac2d-gem/test/ve.dat -text
+mcotac2d-gem/test/wa.dat -text
+mcotac2d-gem/test/wb.dat -text
+mcotac2d-gem/test/wc.dat -text
+mcotac2d-gem/test/wd.dat -text
+mcotac2d-gem/test/we.dat -text
 node-gem/Makefile -text
 node-gem/Makefile.MinGW -text
 node-gem/doc/Readme.1st -text
