Added standalone test version for Pitzer model calculations using TPitzer class  (SD)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@285 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -71,6 +71,11 @@ GEMIPM2K/test/CalcColumn-ipm.dat -text
 GEMIPM2K/test/Readme.1st -text
 GEMIPM2K/test/TEST.BAT -text
 GEMIPM2K/test/test.sh -text
+GEMIPM2K/testPitzer/Makefile -text
+GEMIPM2K/testPitzer/gem_pitz.pro -text
+GEMIPM2K/testPitzer/main.cpp -text
+GEMIPM2K/testPitzer/s_pitzer.cpp -text
+GEMIPM2K/testPitzer/s_pitzer.h -text
 GEMIPM2K/tnt.h -text
 GEMIPM2K/tnt_array1d.h -text
 GEMIPM2K/tnt_array2d.h -text
