First tests and bugfixes done (for 1:1 electrolyte)  FH
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@287 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/testPitzer/.project
+++ b/GEMIPM2K/testPitzer/.project
@@ -23,7 +23,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildArguments</key>
-					<value>-f Makefile.Mingw</value>
+					<value>-f Makefile.MinGW</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildCommand</key>
